WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118682
HTMLMediaElement should not add cues for disabled text tracks
https://bugs.webkit.org/show_bug.cgi?id=118682
Summary
HTMLMediaElement should not add cues for disabled text tracks
Eric Carlson
Reported
2013-07-15 12:40:02 PDT
Merge blink
r153810
,
https://src.chromium.org/viewvc/blink?view=rev&revision=153810
, which extends the changes made in WebKit
r152459
:
http://trac.webkit.org/changeset/152459
Attachments
Proposed patch
(7.50 KB, patch)
2013-07-15 13:35 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-07-15 12:40:15 PDT
<
rdar://problem/14446514
>
Eric Carlson
Comment 2
2013-07-15 13:35:49 PDT
Created
attachment 206682
[details]
Proposed patch
Ryosuke Niwa
Comment 3
2013-07-15 15:25:26 PDT
Comment on
attachment 206682
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=206682&action=review
> Source/WebCore/html/HTMLMediaElement.cpp:1490 > -void HTMLMediaElement::textTrackAddCues(TextTrack*, const TextTrackCueList* cues) > +void HTMLMediaElement::textTrackAddCues(TextTrack* track, const TextTrackCueList* cues)
Would it make sense for this function to take PassRefPtr<TextTrack> instead to be safe?
Eric Carlson
Comment 4
2013-07-16 08:07:38 PDT
(In reply to
comment #3
)
> (From update of
attachment 206682
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=206682&action=review
> > > Source/WebCore/html/HTMLMediaElement.cpp:1490 > > -void HTMLMediaElement::textTrackAddCues(TextTrack*, const TextTrackCueList* cues) > > +void HTMLMediaElement::textTrackAddCues(TextTrack* track, const TextTrackCueList* cues) > > Would it make sense for this function to take PassRefPtr<TextTrack> instead to be safe?
Maybe. These functions are part of a larger interface used by a number of other classes so that will be a much bigger change, so I will do it in a separate patch if it does make sense.
Eric Carlson
Comment 5
2013-07-16 08:13:39 PDT
Committed
r152721
:
http://trac.webkit.org/changeset/152721
Eric Carlson
Comment 6
2013-07-24 08:25:24 PDT
***
Bug 119029
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug