HTMLMediaElement should not add cues for disabled text tracks https://bugs.webkit.org/show_bug.cgi?id=118682

Source/WebCore:

Reviewed by Ryosuke Niwa.

Merge https://src.chromium.org/viewvc/blink?view=rev&revision=153810

Tests: media/track/track-disabled-addcue.html
       media/track/track-disabled.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::textTrackAddCues): Do nothing if the track is disabled.
(WebCore::HTMLMediaElement::textTrackAddCue): Ditto.

LayoutTests:

Merge https://src.chromium.org/viewvc/blink?view=rev&revision=153810

Reviewed by Ryosuke Niwa.

* media/track/track-disabled-addcue-expected.txt: Added.
* media/track/track-disabled-addcue.html: Added.
* media/track/track-disabled-expected.txt: Added.
* media/track/track-disabled.html: Added.


Canonical link: https://commits.webkit.org/136612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152721 268f45cc-cd09-0410-ab3c-d52691b4dbfc